# zenick-aggregator-server

./: .gitignore  LICENSE  README.md  compose.build.yaml  compose.yaml  data.sql  schema.sql
.github/workflows/: build-deploy.yml  crawl.yml
crawler/: Cargo.toml
crawler/.sqlx/: query-7f619d80e9d5f80a599bc293b62df9bb4f362b1a5dafe6946d7df0520e68a1a1.json  query-8295d0b8cd655e7bbabfce89b696d1f557c3aa8f1d3a4a3d49edc1f35f6a99f4.json
crawler/src/: browser.rs  config.rs  database.rs  main.rs  operation.rs  token.rs  util.rs
crawler/src/provider/: cetus.rs  haedal.rs  mod.rs  navi.rs  scallop.rs  suilend.rs
server/: Dockerfile  go.mod  go.sum  main.go
server/docs/: docs.go  swagger.json  swagger.yaml
server/src/controller/: controller.go  history_controller.go  history_link_controller.go  liquidity_pool_history_controller.go  liquidity_pool_history_link_controller.go  operation_controller.go  provider_controller.go  token_controller.go
server/src/dependency_injection/: history_di.go  history_link_di.go  liquidity_pool_history_di.go  liquidity_pool_history_link_di.go  operation_di.go  provider_di.go  repo_di.go  token_di.go
server/src/interfaces/: history_interface.go  history_link_interface.go  liquidity_pool_history_interface.go  liquidity_pool_history_link_interface.go  operation_interface.go  provider_interface.go  repository_interface.go  token_interface.go
server/src/model/: histories.go  histories_link.go  liquidity_pool_histories.go  liquidity_pool_histories_link.go  operations.go  providers.go  tokens.go
server/src/repository/: repo.go
(+9 files in other folders)
