[package]
name = "crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.11"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
